--- a/.env.example
+++ b/.env.example
@@ -139,6 +139,23 @@ APP_ADD_HSTS=true
 API_KEY=
 
 # ==============================================
+# Frontend API Protection
+# ==============================================
+# Secret key shared with frontend (generate with: openssl rand -hex 32)
+FRONTEND_API_KEY=
+
+# Allowed origins for API access (comma-separated)
+ALLOWED_ORIGINS=https://alemancenter.com,https://www.alemancenter.com
+
+# Rate limiting for frontend API
+FRONTEND_RATE_LIMIT=true
+FRONTEND_RATE_LIMIT_MAX=100
+FRONTEND_RATE_LIMIT_WINDOW=60
+
+# Log unauthorized API access attempts
+LOG_UNAUTHORIZED_API_ACCESS=true
+
+# ==============================================
 # Rate Limiting Configuration
 # ==============================================
 # Max login attempts per minute
