--- a/.env.example
+++ b/.env.example
@@ -79,7 +79,9 @@ CACHE_PREFIX=alemancenter_cache
 # Session Configuration
 # ==============================================
 SESSION_DRIVER=redis
-SESSION_LIFETIME=120
+SESSION_LIFETIME=30
+VISITOR_ACTIVE_MINUTES=5
+VISITOR_PRUNE_MINUTES=30
 SESSION_ENCRYPT=true
 SESSION_PATH=/
 SESSION_DOMAIN=.alemancenter.com
