--- a/.env.example
+++ b/.env.example
@@ -22,7 +22,9 @@ LOG_LEVEL=error
 # ==============================================
 # CORS Configuration
 # ==============================================
-# Allowed origins are configured in app/Http/Middleware/Cors.php
+# Comma-separated list of allowed origins (e.g., https://example.com,https://www.example.com)
+# Use * only for development
+CORS_ALLOWED_ORIGINS=https://example.com,https://www.example.com
 CORS_SUPPORTS_CREDENTIALS=true
 
 # ==============================================
@@ -145,9 +147,6 @@ API_KEY=
 # ==============================================
 # Secret key shared with frontend (generate with: openssl rand -hex 32)
 FRONTEND_API_KEY=
-
-# Allowed origins for API access (comma-separated)
-ALLOWED_ORIGINS=https://alemancenter.com,https://www.alemancenter.com
 
 # Rate limiting for frontend API
 FRONTEND_RATE_LIMIT=true
